# chatbi-agent

./: .gitignore  agent_prompts.txt  client.py  pyproject.toml  servers_config.json  weather_server.py  write_server.py
output/: note_20250720_101631.txt
