[project]
name = "mcp-get-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "langchain-deepseek>=0.1.3",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.3",
    "mcp>=1.12.0",
]
